Restructure, add browserify, add react-router

--- a/react-todos/client/stylesheets/main.less
+++ b/react-todos/client/stylesheets/main.less
@@ -24,7 +24,7 @@
 @import 'globals/notification.import.less';
 
 // Templates
-@import '../templates/lists-show.import.less';
-@import '../templates/auth.import.less';
-@import '../templates/app-not-found.import.less';
-@import '../templates/loading.import.less';
+@import 'components/lists-show.import.less';
+@import 'components/auth.import.less';
+@import 'components/app-not-found.import.less';
+@import 'components/loading.import.less';
